--- a/simple_api/Dockerfile
+++ b/simple_api/Dockerfile
@@ -1,14 +1,13 @@
-FROM python:2.7-stretch AS build
-LABEL Tony "tony@dejesus.pt"
+FROM python:2.7-stretch
+LABEL maintainer="tony@dejesus.pt"
+#MAINTAINER Tony tony@dejesus.pt
+RUN apt-get update -y && apt-get install git -y
 RUN git clone https://github.com/diranetafen/student-list.git
+WORKDIR /student-list
+COPY . /
 RUN apt-get update -y && apt-get install python-dev python3-dev libsasl2-dev python-dev libldap2-dev libssl-dev -y
 RUN pip install flask==1.1.2 flask_httpauth==4.1.0 flask_simpleldap python-dotenv==0.14.0
-COPY student-list /
-
-
-
-
-FROM alpine:latest AS test
-WORKDIR /root/
-COPY --from=base /go/src/github.com/alexellis/href-counter/app ./
-CMD ["./app"]
+RUN mkdir /data
+VOLUME /data
+EXPOSE 5000
+CMD [ "python", "./student_age.py" ]
