--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: php:apache
     environment:
       - USERNAME="tony"
-      - PASSWORD="Kiolcjhfhvo874"
+      - PASSWORD="Test2023"
     volumes:
       - ./website:/var/www/html
     depends_on:
