--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
-version: '3'
+version: '3.1'
 services:
   website:
     image: php:apache
+    container_name: container_web
     environment:
       - USERNAME=toto
       - PASSWORD=python
@@ -11,9 +12,17 @@ services:
       - API
     ports:
       - 80:80
+    networks:
+      - student-network
   API:
     image: image_api
+    container_name: container_api
     volumes:
       - ./simple_api/student_age.json:/data/student_age.json
     ports:
       - 5000:5000
+    networks:
+      - student-network
+
+networks:
+  student-network:
